[package]
name = "spawn-task-port"
version = "0.1.1-pre"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
license = "MIT"
description = "Spawn a child process on OS X and get the child's Mach task port."
homepage = "https://github.com/luser/rust-spawn-task-port"
repository = "https://github.com/luser/rust-spawn-task-port"
build = "build.rs"

[dependencies]
mach = "0.1"
uuid = { version = "0.4", features = ["v4"] }

[dev-dependencies]
libc = "0.2"
skeptic = "0.5"

[build-dependencies]
skeptic = "0.5"
